# mc-launcher-gui

./: .gitignore  Cargo.toml  README.md  flake.nix
nix/: package.nix
src/: main.rs
ui/: appwindow.slint  material-palette.slint
ui/widgets/: button.slint  labelbar.slint
ui/widgets/gruvbox/: color-scheme.slint  demo.slint
ui/widgets/style/: global.slint  metrics.slint
