[package]
name = "gui"
version = "0.1.0"
edition = "2021"
description = "mc-launcher-gui"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dependencies.slint]
version = "1.3.0"
features = [
    # "backend-winit",
    # "backend-winit-wayland",
    # "renderer-winit-skia",
    # "renderer-winit-skia-vulkan",
]


[build-dependencies]
slint-build = "1.3.0"

[profile.release]
lto = true
panic = "abort"
