[package]
name = "gui"
version = "0.1.0"
edition = "2021"
description = "mc-launcher-gui"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dependencies.slint]
version = "1.3.0"
default-features = false
features = [
    "compat-1-2",
    "std",
    "software-renderer-systemfonts",
    "accessibility",
]


[build-dependencies]
slint-build = "1.3.0"

[features]
backend-qt = ["slint/backend-qt"]
backend-winit = ["slint/backend-winit", "slint/renderer-skia-vulkan"]

[profile.release]
lto = true
panic = "abort"
